<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="hello">Choose one of the features below.</string>

    <string name="app_name">Book Worm</string>
    <string name="description_logo">Demo</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>
    <string name="description_">wtf</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="new_book_title">新书速递</string>
    <string name="top_ten_title">热书榜</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>
    
    <string name="loading">正在获取</string>
    <string name="loading_more">显示更多</string>
    <string name="connection_wrong_msg">网络连接失败，请检查网络是否连接</string>
    <string name="update_book_failed">获取信息失败，请稍后再试</string>
    <string name="search_title">搜索结果：</string>
	
	<string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">松开以刷新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">正在加载&#8230;</string>
    <string name="pull_to_refresh_tap_label">点击加载信息&#8230;</string>
    <string name="about_app">BookWorm提供的信息部分取自Douban.com</string>
    <string name="source_code_info">此App为开源程序:</string>
    <string name="source_code_address">https://github.com/twocity/BookWorm</string>
    <string name="author_info">dvy.zhang@gmail.com</string>
</resources>
