<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout style="@style/TitleBar">
		<TextView style="@style/TitleBarText" 
		    android:text="@string/app_name"/>
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_about"
    		android:src="@drawable/title_about"
    		android:onClick="onClickAbout" />
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_search"
    		android:src="@drawable/title_search"
    		android:onClick="onClickSearch" />
    </LinearLayout>    		
    		
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Button android:id="@+id/newBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_book_title" 
        android:onClick="doClick"/>
    <Button android:id="@+id/topBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_ten_title" 
        android:onClick="doClick"/>
</LinearLayout>
</LinearLayout>
