<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout style="@style/TitleBar">
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_logo"
    		android:src="@drawable/title_home" 
    		android:onClick="onClickHome" />
    	<ImageView style="@style/TitleBarSeparator" 
    	    android:contentDescription="@string/description_"/>
    	<TextView style="@style/TitleBarText" 
    	    android:id="@+id/activity_title"/>
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_about"
    		android:src="@drawable/title_about"
    		android:visibility="gone"
    		android:onClick="onClickAbout" />
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_search"
    		android:src="@drawable/title_search"
    		android:onClick="onClickSearch" />
    </LinearLayout>    		
    		
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	
	    <com.twocity.bookworm.widget.PullToRefreshListView
		   android:id="@+id/newest_book_list"
		   android:layout_height="match_parent"
		   android:layout_width="wrap_content" 
		   android:divider="@drawable/list_divider_line"
		   android:listSelector="@drawable/listview_selected"
		   android:dividerHeight="2.5dp"/>
	
	</LinearLayout>

</LinearLayout>
