<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout style="@style/TitleBar">
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_logo"
    		android:src="@drawable/title_home" 
    		android:onClick="onClickHome" />
    	<ImageView style="@style/TitleBarSeparator" />
    	<TextView style="@style/TitleBarText" />
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_search"
    		android:src="@drawable/title_search"
    		android:onClick="onClickSearch" />
    </LinearLayout>    		
    		

	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="20dp">
	    <TextView  style="@style/TextBody"
	        android:id="@+id/about_activity_text"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/about_app" />
	</LinearLayout>"

</LinearLayout>
