<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout style="@style/TitleBar">
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_logo"
    		android:src="@drawable/title_home" 
    		android:onClick="onClickHome" />
    	<!--  <ImageView style="@style/TitleBarSeparator" /> -->
    	<EditText style="@style/TitleBarSearch" />

    	<ProgressBar
    	    android:id="@+id/search_progressbar"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
       	    android:visibility="gone"
    	    />

    	<ImageButton style="@style/TitleBarAction"
    		android:id="@+id/search_button"
    		android:contentDescription="@string/description_search"
    		android:src="@drawable/title_search"/>
    </LinearLayout>    		
    		
	<TextView  android:id="@+id/search_title"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/search_title"
	    />

	<ListView
	    android:id="@+id/search_book_list"
		android:layout_height="match_parent"
		android:layout_width="wrap_content" 
		android:divider="@drawable/list_divider_line"
		android:listSelector="@drawable/listview_selected"
		android:dividerHeight="2.5dp" />

</LinearLayout>
